数据中台-移除日志写入SPI模块，精简代码